--- a/.travis.yml
+++ b/.travis.yml
@@ -53,9 +53,9 @@ env:
 
     # === Behat specific variables.
     # This is relative to $TRAVIS_BUILD_DIR
-    - DRUPAL_TI_BEHAT_DIR="./tests/behat"
+    - DRUPAL_TI_BEHAT_DIR="./tests"
     # These arguments are passed to the bin/behat command.
-    - DRUPAL_TI_BEHAT_ARGS="--tags='travis'"
+    - DRUPAL_TI_BEHAT_ARGS=""
     # Specify the filename of the behat.yml with the $DRUPAL_TI_DRUPAL_DIR variables.
     - DRUPAL_TI_BEHAT_YML="behat.yml.dist"
     # This is used to setup Xvfb.
