--- a/tests/behat.yml.dist
+++ b/tests/behat.yml.dist
@@ -71,15 +71,17 @@ default:
     Behat\MinkExtension:
       goutte: ~
       selenium2: ~
-      base_url: http://localhost
+      base_url: "$DRUPAL_TI_WEBSERVER_URL:$DRUPAL_TI_WEBSERVER_PORT/"
+      browser_name: "$DRUPAL_TI_BEHAT_BROWSER"
+      files_path: "$DRUPAL_TI_DRUPAL_DIR"
     Drupal\DrupalExtension:
       blackbox: ~
       api_driver: 'drupal'
       drupal:
-        drupal_root: '/var/www'
+        drupal_root: '$DRUPAL_TI_DRUPAL_DIR'
       drush_driver: 'drush'
       drush:
-        root: '/var/www'
+        root: '$DRUPAL_TI_DRUPAL_DIR'
       region_map:
         primary tabs: "ul.tabs.primary"
         secondary tabs: "ul.tabs.secondary"
