--- a/.travis.yml
+++ b/.travis.yml
@@ -111,6 +111,8 @@ before_script:
   - drupal-ti before_script
 
 script:
+  - bin/behat --version
+  - behat --version
   - drupal-ti script
 
 after_script:
