--- a/.travis.yml
+++ b/.travis.yml
@@ -111,6 +111,7 @@ before_script:
   - drupal-ti before_script
 
 script:
+  - ln -s ./vendor/bin/behat ./bin/behat
   - drupal-ti script
 
 after_script:
