--- a/.travis.yml
+++ b/.travis.yml
@@ -111,7 +111,7 @@ before_script:
   - drupal-ti before_script
 
 script:
-  - ln -s ./vendor/bin/behat ./bin/behat
+  - ln -s ./vendor/bin/behat $DRUPAL_TI_MODULES_PATH/tests/bin/behat
   - drupal-ti script
 
 after_script:
